{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 452,
  "lineage": "dff3b825-2f09-277c-91b6-bd63416a7961",
  "resources": [
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:security-group/sg-00211b487b8af76fc",
            "description": "Security group for RDS example",
            "egress": [],
            "id": "sg-00211b487b8af76fc",
            "ingress": [],
            "name": "playground-simple-vpc-security-group-rds-20230313174204710200000003",
            "name_prefix": "playground-simple-vpc-security-group-rds-",
            "owner_id": "798797614836",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-security-group-rds",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-security-group-rds",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress-sg",
            "from_port": 0,
            "id": "sgrule-2504408246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00211b487b8af76fc",
            "security_group_rule_id": "sgr-0de06d4ec9c625e6d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Ingress-sg",
            "from_port": 3306,
            "id": "sgrule-2725535624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00211b487b8af76fc",
            "security_group_rule_id": "sgr-00a6585e8b7deb268",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_rds.aws_security_group.this",
            "module.security_group_rds.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e19cc21e0e5c9a49",
            "domain": "vpc",
            "id": "eipalloc-0e19cc21e0e5c9a49",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-35-204.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.35.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6623edbffb8f802",
            "domain": "vpc",
            "id": "eipalloc-0c6623edbffb8f802",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-137-78-118.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.78.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0831454f1009ed03a",
            "domain": "vpc",
            "id": "eipalloc-0831454f1009ed03a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-31-143.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.31.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:internet-gateway/igw-0367914933539c56a",
            "id": "igw-0367914933539c56a",
            "owner_id": "798797614836",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e19cc21e0e5c9a49",
            "connectivity_type": "public",
            "id": "nat-0e4dd03bc379eacd4",
            "network_interface_id": "eni-0834cbcb4fdb79465",
            "private_ip": "10.0.10.205",
            "public_ip": "3.13.35.204",
            "subnet_id": "subnet-04e125fae0397c6c3",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6623edbffb8f802",
            "connectivity_type": "public",
            "id": "nat-0a24cd57dfc486921",
            "network_interface_id": "eni-06b1f2c507536f027",
            "private_ip": "10.0.11.53",
            "public_ip": "3.137.78.118",
            "subnet_id": "subnet-047f435b286275312",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0831454f1009ed03a",
            "connectivity_type": "public",
            "id": "nat-0ce5dabb4bd8585ff",
            "network_interface_id": "eni-0270293f0475b561d",
            "private_ip": "10.0.12.99",
            "public_ip": "3.14.31.143",
            "subnet_id": "subnet-00bb342e63714f32d",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04bdd0b16f641b2621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e4dd03bc379eacd4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04bdd0b16f641b262",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0621a2d275197c59f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a24cd57dfc486921",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0621a2d275197c59f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0487f98e144d928461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ce5dabb4bd8585ff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0487f98e144d92846",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0367914933539c56a",
            "id": "r-rtb-02fc9f35a1a6649a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02fc9f35a1a6649a1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-00c90c10b8334974b",
            "id": "rtb-00c90c10b8334974b",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-08d0b56376e5f6428",
            "id": "rtb-08d0b56376e5f6428",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-0968da0c7ff392094",
            "id": "rtb-0968da0c7ff392094",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-04bdd0b16f641b262",
            "id": "rtb-04bdd0b16f641b262",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-0621a2d275197c59f",
            "id": "rtb-0621a2d275197c59f",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-0487f98e144d92846",
            "id": "rtb-0487f98e144d92846",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:route-table/rtb-02fc9f35a1a6649a1",
            "id": "rtb-02fc9f35a1a6649a1",
            "owner_id": "798797614836",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-public",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-public",
              "Owner": "carlos-cuellar-maravilla"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00181e608ddc63f82",
            "route_table_id": "rtb-00c90c10b8334974b",
            "subnet_id": "subnet-0487a1f66a1fa4515"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052e43303464c2859",
            "route_table_id": "rtb-08d0b56376e5f6428",
            "subnet_id": "subnet-0806740d12b6703ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0190ff0473bee5e",
            "route_table_id": "rtb-0968da0c7ff392094",
            "subnet_id": "subnet-054ce67932136a2fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7e587e47c68b3f",
            "route_table_id": "rtb-04bdd0b16f641b262",
            "subnet_id": "subnet-05aaf12070ff10b50"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd9034f5a7ae9e9",
            "route_table_id": "rtb-0621a2d275197c59f",
            "subnet_id": "subnet-03d573c9b705c277c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d7670c21200e655",
            "route_table_id": "rtb-0487f98e144d92846",
            "subnet_id": "subnet-01becd9d92751533d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f68a8dc52f48bed4",
            "route_table_id": "rtb-02fc9f35a1a6649a1",
            "subnet_id": "subnet-04e125fae0397c6c3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21ca8c1d5b0fa87",
            "route_table_id": "rtb-02fc9f35a1a6649a1",
            "subnet_id": "subnet-047f435b286275312"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd6dfa7b6a887efe",
            "route_table_id": "rtb-02fc9f35a1a6649a1",
            "subnet_id": "subnet-00bb342e63714f32d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-0487a1f66a1fa4515",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0487a1f66a1fa4515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-0806740d12b6703ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0806740d12b6703ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-054ce67932136a2fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054ce67932136a2fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-db-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-05aaf12070ff10b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aaf12070ff10b50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2a",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-03d573c9b705c277c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d573c9b705c277c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2b",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-01becd9d92751533d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01becd9d92751533d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "playground-simple-vpc-private-us-east-2c",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-04e125fae0397c6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e125fae0397c6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla",
              "availability-zone": "us-east-2a"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla",
              "availability-zone": "us-east-2a"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-047f435b286275312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f435b286275312",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:subnet/subnet-00bb342e63714f32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bb342e63714f32d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798797614836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "public-subnet",
              "Owner": "carlos-cuellar-maravilla"
            },
            "vpc_id": "vpc-0ac872e153bf25210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798797614836:vpc/vpc-0ac872e153bf25210",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0afc08e232f13183f",
            "default_route_table_id": "rtb-00932a0d57b555c5c",
            "default_security_group_id": "sg-0c31691f2ab89a456",
            "dhcp_options_id": "dopt-88cf77e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac872e153bf25210",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00932a0d57b555c5c",
            "owner_id": "798797614836",
            "tags": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "vpc-playground",
              "Owner": "carlos-cuellar-maravilla"
            },
            "tags_all": {
              "Environment": "playground",
              "Example": "playground-simple-vpc",
              "Name": "vpc-playground",
              "Owner": "carlos-cuellar-maravilla"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}